--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "pretty": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json}\"",
-    "server": "nodemon --esm server/index.ts",
+    "server": "nodemon --exec tsx server/index.ts",
     "dev:full": "concurrently \"npm run dev\" \"npm run server\""
   },
   "dependencies": {
@@ -42,6 +42,7 @@
     "prettier": "^3.5.3",
     "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
+    "tsx": "^4.19.3",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0"
