Install node-fetch for http requests

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.21.2",
     "lucide-react": "^0.482.0",
     "node-cron": "^3.0.3",
+    "node-fetch": "^3.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sqlite": "^5.1.1",
