--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@daypilot/daypilot-lite-react": "^3.32.1",
     "@tailwindcss/vite": "^4.0.14",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "lucide-react": "^0.482.0",
     "node-cron": "^3.0.3",
